@@ -205,6 +205,8 @@ z80MightRead(const lineNode *pl, const char *what)
 {
   if(strcmp(what, "iyl") == 0 || strcmp(what, "iyh") == 0)
     what = "iy";
+  if(strcmp(what, "ixl") == 0 || strcmp(what, "ixh") == 0)
+    what = "ix";
 
   if(strcmp(pl->line, "call\t__initrleblock") == 0)
     return TRUE;
@@ -220,7 +222,7 @@ z80MightRead(const lineNode *pl, const char *what)
 
   if(strcmp(pl->line, "ex\t(sp),hl") == 0 && strchr(what, 'h') == 0 && strchr(what, 'l') == 0)
     return FALSE;
-  if(strcmp(pl->line, "ex\tde,hl") == 0 && strchr(what, 'h') == 0 && strchr(what, 'l') == 0 && strchr(what, 'd') == 0&& strchr(what, 'e') == 0)
+  if(strcmp(pl->line, "ex\tde,hl") == 0 && strchr(what, 'h') == 0 && strchr(what, 'l') == 0 && strchr(what, 'd') == 0 && strchr(what, 'e') == 0)
     return FALSE;
   if(ISINST(pl->line, "ld\t"))
     {
@@ -341,6 +343,11 @@ z80CondJump(const lineNode *pl)
 static bool
 z80SurelyWrites(const lineNode *pl, const char *what)
 {
+  if(strcmp(what, "iyl") == 0 || strcmp(what, "iyh") == 0)
+    what = "iy";
+  if(strcmp(what, "ixl") == 0 || strcmp(what, "ixh") == 0)
+    what = "ix";
+
   if(strcmp(pl->line, "xor\ta,a") == 0 && strcmp(what, "a") == 0)
     return TRUE;
   if(ISINST(pl->line, "ld\t") && strncmp(pl->line + 3, "hl", 2) == 0 && (what[0] == 'h' || what[0] == 'l'))
@@ -353,7 +360,7 @@ z80SurelyWrites(const lineNode *pl, const char *what)
     return TRUE;
   if(ISINST(pl->line, "pop\t") && strstr(pl->line + 4, what))
     return TRUE;
-  if(ISINST(pl->line, "call\t") && strchr(pl->line, ',') == 0)
+  if(ISINST(pl->line, "call\t") && strchr(pl->line, ',') == 0  && strcmp(what, "ix"))
     return TRUE;
   if(strcmp(pl->line, "ret") == 0)
     return TRUE;
@@ -583,6 +590,12 @@ z80notUsed (const char *what, lineNode *endPl, lineNode *head)
           if(IY_RESERVED)
             return FALSE;
           return(z80notUsed("iyl", endPl, head) && z80notUsed("iyh", endPl, head));
+        }
+      if(strcmp(what, "ix") == 0)
+        {
+          if(IY_RESERVED)
+            return FALSE;
+          return(z80notUsed("ixl", endPl, head) && z80notUsed("ixh", endPl, head));
         }
       return(z80notUsed(low, endPl, head) && z80notUsed(high, endPl, head));
     }
